--- a/static/bower.json
+++ b/static/bower.json
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular-material": "~0.6.1"
+    "angular-material": "~0.6.1",
+    "ui-router": "~0.2.13"
   }
 }
