--- a/static/bower.json
+++ b/static/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "angular-material": "~0.6.1",
-    "ui-router": "~0.2.13"
+    "ui-router": "~0.2.13",
+    "angular-cookies": "~1.3.8"
   }
 }
