--- a/static/bower.json
+++ b/static/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular-material": "~0.6.1",
     "ui-router": "~0.2.13",
-    "angular-cookies": "~1.3.8"
+    "angular-cookies": "~1.3.8",
+    "parse-js-sdk": "https://github.com/albemuth/parse-js-sdk"
   }
 }
