--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "uScheduler",
     "dependencies": {
-        "bower": "1.3.12",
+        "bower": "1.3.12"
     },
     "scripts": {
-        "postinstall": "cd static/ ; bower install",
-    },
+        "postinstall": "cd static/ ; bower install"
+    }
 }
